tests/ui/diagnostic-width/non-whitespace-trimming-2.ascii.stderr
error[E0308]: mismatched types
  --> $DIR/non-whitespace-trimming-2.rs:7:311
   |
LL | ...13; let _: usize = 14; let _: usize = 15; let _: () = 42; let _: usize = 0; let _: usize = 1; let _: usize = 2; let _: usize = 3; let ...
   |                                                     --   ^^ expected `()`, found integer
   |                                                     |
   |                                                     expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
